add tratamento de erros